apps/nocodb/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nocodb
  namespace: apps
  annotations:
    secret.reloader.stakater.com/reload: "nocodb-env"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nocodb
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      containers:
        - name: nocodb
          image: nocodb/nocodb:latest
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /usr/app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nocodb-data
